Solved build errors in woodelements api